--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -1,73 +1,74 @@
-<form class="flex flex-wrap items-center justify-center mx-auto my-32 w-full max-w-lg">
+<form (ngSubmit)="onSubmit()" class="flex flex-wrap items-center justify-center mx-auto my-32 w-full max-w-lg">
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="firstName">
                 First Name
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                id="grid-first-name" type="text" placeholder="Jane">
+                id="firstName" name="firstName" type="text" placeholder="Jane">
             
         </div>
         <div class="w-full md:w-1/2 px-3">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-last-name">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="lastName">
                 Last Name
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="grid-last-name" type="text" placeholder="Doe">
+                id="lastName" name="lastName" type="text" placeholder="Doe">
         </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">
                 Email
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="grid-password" type="password" placeholder="jesus@dachrist.com">
+                id="email" name="email" type="text" placeholder="jesus@dachrist.com">
             <p class="text-gray-600 text-xs italic">Remember to keep it professional Sparkles</p>
         </div>
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="phoneNumber">
                 Phone Number
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="grid-password" type="password" placeholder="xxx-xxx-xxxx">
+                id="phoneNumber" name="phoneNumber" type="number" placeholder="xxx-xxx-xxxx">
             <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>
         </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="username">
                 Username
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="grid-password" type="password" placeholder="savior_complex">
+                id="username" name="username" type="text" placeholder="savior_complex">
             <p class="text-gray-600 text-xs italic">Anything will do</p>
         </div>
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="password">
                 Password
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="grid-password" type="password" placeholder="*************"s>
+                id="password" type="password" placeholder="*************"s>
             <p class="text-gray-600 text-xs italic">We're gonna salt it!</p>
         </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full  md:w-full  mb-6 md:mb-0">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="bio">
                 Bio
             </label>
             <textarea
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="grid-password" type="password" placeholder=""></textarea>
+                id="bio" name="bio" type="text" placeholder=""></textarea>
             <p class="text-gray-600 text-xs italic">Tell us about yourself</p>
         </div>
     </div>
     
 </form>
+
