--- a/src/app/componets/admin/admin.component.html
+++ b/src/app/componets/admin/admin.component.html
@@ -1,8 +1,14 @@
-
-<div class="bg-gray-200 h-screen my-32">
-    <ul>
-        <li *ngFor="let user of users">
-            <p>{{user.UserId}}. {{user.FirstName}} {{user.LastName}}</p>
-        </li>
-    </ul>
+<div class="bg-gray-100 max-h-full ">
+    <div class="text-xl p-3">
+        <h4>Users</h4>
+    </div>
+    <li *ngFor="let user of users" class="list-none">
+        <div class="max-w-sm rounded overflow-hidden shadow-lg ">
+            <div class="px-6 py-4  ">
+                <p>{{user.UserId}}. {{user.FirstName}} {{user.LastName}}</p>
+                <p>{{user.Email}} </p>
+                <p>{{user.Bio}}</p>
+            </div>
+        </div>
+    </li>
 </div>
