--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,12 +94,12 @@
 		<span class="menu-spacer"></span>
 		<div fxShow="true" fxHide.lt-md>
 		  <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-		  <a routerLink="home" mat-button>Home</a>
-		  <a routerLink="user-profile"  mat-button>User Profile</a>
-		  <a routerLink="about" mat-button>About</a>
-		  <a routerLink="missions-profile" mat-button>Missions Profile</a>
-		  <a routerLink="login" mat-button>Login</a>
-		  <a routerLink="signup" mat-button>Signup</a>
+		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="home" mat-button>Home</a>
+		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="user-profile"  mat-button>User Profile</a>
+		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="about" mat-button>About</a>
+		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="missions-profile" mat-button>Missions Profile</a>
+		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="login" mat-button>Login</a>
+		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="signup" mat-button>Signup</a>
 		</div>
 		<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
 		id="nav-content">
