--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -21,31 +21,37 @@ https://tailwindcss-custom-forms.netlify.app/ -->
             </div>
         </div>
     </div>
-    <div class="p-5 w-2/3 flex flex-col justify-center items-center">
-        <!-- LEFT SIDE OF FORM: LOGO & BIO -->
-        <div class="flex flex-col mb-5 w-full">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="logo"> Organization
-                Logo </label>
-            <input
-                class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                id="logo" type="file" accept="image" [(ngModel)]="newMission.image">
+    <form (ngSubmit)="addMission()" class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg">
+        <div class="p-5 w-2/3 flex flex-col justify-center items-center">
+            <!-- LEFT SIDE OF FORM: LOGO & BIO -->
+
+            <div class="flex flex-col mb-5 w-full">
+                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="logo">
+                    Organization
+                    Logo </label>
+                <input
+                    class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
+                    id="logo" type="file" accept="image" [(ngModel)]="newMission.image">
+            </div>
+            <div class="flex flex-col mb-5 w-full">
+                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="bio"> Bio
+                </label>
+                <textarea
+                    class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-24 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
+                    id="bio" type="text" placeholder="Short summary of what you're most known for"
+                    [(ngModel)]="newMission.bio" name="bio"></textarea>
+            </div>
         </div>
-        <div class="flex flex-col mb-5 w-full">
-            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="bio"> Bio </label>
-            <textarea
-                class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-24 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                id="bio" type="text" placeholder="Short summary of what you're most known for"></textarea>
-        </div>
-    </div>
-    <div class="p-4 w-full flex flex-col justify-center mt-20 items-center">
-        <!-- RIGHT SIDE OF FORM: NAME & LOCATION -->
-        <form (ngSubmit)="addMission()" class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg">
+        <div class="p-4 w-full flex flex-col justify-center mt-20 items-center">
+            <!-- RIGHT SIDE OF FORM: NAME & LOCATION -->
+
             <div class="flex flex-col mb-4 w-full">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-name">
                     Organization Name </label>
                 <input
                     class="appearance-none block w-full bg-gray-100 text-gray-700 border shadow border-gray-500 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="org-name" type="text" placeholder="Organization Name" [(ngModel)]="newMission.organizationName" name="orgName">
+                    id="org-name" type="text" placeholder="Organization Name" [(ngModel)]="newMission.organizationName"
+                    name="orgName">
             </div>
             <div class="flex flex-col mb-4 w-full">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-address">
@@ -139,7 +145,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 shadow rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-city" type="text" placeholder="90210" [(ngModel)]="newMission.zip"  name="org-zip">
+                        id="grid-city" type="text" placeholder="90210" [(ngModel)]="newMission.zip" name="org-zip">
                 </div>
                 <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
                     <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-country">
@@ -148,7 +154,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     <div class="relative">
                         <select
                             class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                            id="org-country" [(ngModel)]="newMission.missionLocationCountry" name="mission-city">
+                            id="org-country" [(ngModel)]="newMission.missionLocationCountry" name="org-country">
                             <option value="Afganistan">Afghanistan</option>
                             <option value="Albania">Albania</option>
                             <option value="Algeria">Algeria</option>
@@ -412,7 +418,8 @@ https://tailwindcss-custom-forms.netlify.app/ -->
             </div>
             <div class="flex flex-wrap -mx-2 mb-2">
                 <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="mission-city">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+                        for="mission-city">
                         City
                     </label>
                     <input
@@ -421,7 +428,8 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                         [(ngModel)]="newMission.missionLocationCity" name="mission-city">
                 </div>
                 <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="mission-country">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+                        for="mission-country">
                         Country
                     </label>
                     <div class="relative">
@@ -685,7 +693,9 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                 </div>
             </div>
 
-            <button type="submit" class="bg-gray-700 text-white shadow rounded py-2 px-5 w-64 mt-10">Save Changes</button>
-        </form>
-    </div>
+            <button type="submit" class="bg-gray-700 text-white shadow rounded py-2 px-5 w-64 mt-10">Save
+                Changes</button>
+
+        </div>
+    </form>
 </div>
