--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
 					routerLink="login" routerLinkActive="active">Login</a>
 			</li>
 			<li class="mr-3">
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="signup" routerLinkActive="active">Signup</a>
 			</li>
 		</ul>
@@ -77,48 +77,58 @@
 	}
 </script> -->
 
-<div >
-	<mat-toolbar class="flex sticky justify-between flex-wrap shadow-md bg-gray-100 p-4 w-full z-40 top-0">
-		<mat-toolbar-row>
+<div>
+	<mat-toolbar class="flex sticky justify-between items-center flex-wrap shadow-md bg-gray-100 p-4 w-auto z-50 top-0">
+		<mat-toolbar-row class="flex">
 			<span>
 				<div class="flex mr-6 ">
 					<a routerLink="home" routerLinkActive="active">
-						<img alt="logo" class="w-40 mr-2 shadow-lg" src="../assets/images/Logo.png">
+						<img alt="logo" class="w-40 shadow-lg" src="../assets/images/Logo.png">
 					</a>
 				</div>
 			</span>
 
 			<div fxShow="true" fxHide.lt-sm
-				class="justify-end w-full flex-grow lg:flex lg:items-center lg:w-auto hidden pt-6 lg:pt-0"
-				id="nav-content">
+				class="justify-end  flex-grow lg:flex lg:items-center lg:w-auto hidden pt-6 lg:pt-0" id="nav-content">
 				<!-- The following menu items are for screen sizes above Small size -->
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="home" mat-button>Home</a>
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="user-profile" mat-button>User Profiles</a>
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="about" mat-button>About</a>
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="missions-profile" mat-button>Missions Profile</a>
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="login" mat-button>Login</a>
-				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="signup" mat-button>Signup</a>
 			</div>
 
-			<div class="relative">
-				<button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-md>
-					<span class="material-icons">Menu </span>
-				</button>
-			</div>
 
 		</mat-toolbar-row>
+		<div class="flex justify-end items-stretch w-full">
+			<button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-md>
+				<svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+					<title>Menu</title>
+					<path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+				</svg>
+			</button>
+		</div>
+
 	</mat-toolbar>
 	<!-- Menu items for Hamburger -->
-	<mat-sidenav-container fxFlexFill>
-		<mat-sidenav #sidenav class="bg-gray-400 sm:justify-end">
-			<mat-nav-list>
-				<a (click)="sidenav.toggle()"  mat-list-item>Close</a> 
+	<mat-sidenav-container fxFlexFill fxLayout="row" fxLayoutAlign="end" class="shadow-md">
+		<mat-sidenav #sidenav class="bg-gray-400 ">
+			<mat-nav-list (click)="sidenav.toggle()">
+				<button class="static justify-end px-2 py-2">
+					<svg class="fill-current h-6 w-6" role="button" xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 20 20">
+						<title>Close</title>
+						<path
+							d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+					</svg>
+				</button>
 				<a routerLink="home" mat-list-item>Home</a>
 				<a routerLink="user-profile" mat-list-item>User Profile</a>
 				<a routerLink="about" mat-list-item>About</a>
@@ -136,8 +146,10 @@
 					<div class="flex flex-wrap mb-2 w-full">
 						<div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
 							<h3 class="text-2xl py-4">About Us</h3>
-							<p>This application was produced by Bethel School of Technology students: Brittani Falor, Colin
-								Cantwell, Scott Goodwin and Connor Chaffin. This web application is built on an Angular Front-end
+							<p>This application was produced by Bethel School of Technology students: Brittani Falor,
+								Colin
+								Cantwell, Scott Goodwin and Connor Chaffin. This web application is built on an Angular
+								Front-end
 								Framework and sourced from a SQL Database using Express/Node.js Back-end.
 							</p>
 						</div>
@@ -151,7 +163,7 @@
 								<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4"
 									routerLink="admin" routerLinkActive="active">Admin</a>
 							</h3>
-			
+
 						</div>
 						<div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 ">
 							<h3 class="text-2xl py-4">GitHub Links</h3>
@@ -162,12 +174,10 @@
 								<li><a href="https://github.com/connor-chaffin">Connor Chaffin</a></li>
 							</ul>
 						</div>
-			
+
 					</div>
 				</div>
 			</footer>
 		</mat-sidenav-content>
 	</mat-sidenav-container>
 </div>
-
-
